fix file extension for windows